--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,19 @@
     <string name="error_password_match">Password Does Not Matches</string>
     <string name="error_valid_email_password">Wrong Email or Password</string>
 
+    <string name="dialog_search_hint">Enter the desired location</string>
+    <string name="search_dialog_title">Find popular Venues</string>
 
+    <string name="dialog_option_cancel">Cancel</string>
+    <string name="dialog_option_confirm">Search</string>
+    <string name="venue_row_rating">Rating: </string>
+
+    <string name="venue_search_loading">Retrieving Venues</string>
+    <string name="venue_search_loading_error">Error retreaving venues, please try again.</string>
+    <string name="venue_search_empty_error">You must enter a search term.</string>
+    <string name="venue_search_invalid_error">Could not find a place that matches the one entered, please try again.</string>
+
+    <string name="no_inernet_connection">No internet connection, please try again later.</string>
     <string name="location">Lokasi</string>
 
     <string name="country">Negara</string>
